@@ -38,6 +38,7 @@
 === Miscellaneous ===
 
 === Bug fixes ===
+ * #926 (Covariance model active parameter set behavior)
  * #928 (Covariance model/ Field/Process properties naming)
 
 == 1.10rc1 release (2017-10-11) == #release-1.10rc1
